[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game/Menus/Login/ServerLogin.gd" type="Script" id=1]
[ext_resource path="res://Game/Menus/General/MenuFont.tres" type="DynamicFont" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.227451, 0.2, 0.356863, 1 )

[node name="ServerLogin" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServerSettings" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Login" type="VBoxContainer" parent="ServerSettings"]
margin_right = 960.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="serverchoice" type="OptionButton" parent="ServerSettings/Login"]
margin_right = 960.0
margin_bottom = 132.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Heroku"
align = 1
items = [ "Heroku", null, false, 0, null, "Localhost", null, false, 1, null, "Single Player", null, false, 2, null ]
selected = 0

[node name="username" type="LineEdit" parent="ServerSettings/Login"]
margin_top = 136.0
margin_right = 960.0
margin_bottom = 268.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
placeholder_text = "Username"

[node name="password" type="LineEdit" parent="ServerSettings/Login"]
margin_top = 272.0
margin_right = 960.0
margin_bottom = 404.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
secret = true
placeholder_text = "Password"

[node name="LoginButton" type="Button" parent="ServerSettings/Login"]
margin_top = 408.0
margin_right = 960.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Login"

[node name="Logout" type="VBoxContainer" parent="ServerSettings"]
visible = false
margin_top = 272.0
margin_right = 960.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LogoutButton" type="Button" parent="ServerSettings/Logout"]
margin_right = 960.0
margin_bottom = 268.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Logout"
[connection signal="item_selected" from="ServerSettings/Login/serverchoice" to="." method="_on_serverchoice_item_selected"]
[connection signal="pressed" from="ServerSettings/Login/LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="ServerSettings/Logout/LogoutButton" to="." method="_on_LogoutButton_pressed"]
